# embassy_preempt_app_Visionfive2

./: .gitignore  Cargo.toml  build.rs  riscv64imc-unknown-none-elf.json
.cargo/: config.toml
src/: bss.rs  cpu_freq.rs  csr.rs  gpio.rs  intercom.rs  lib.rs  sync.rs  system_info.rs
